--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,110 @@
-.App {
-  text-align: center;
+.header {
+  display: flex;
+  justify-content: center;
+  font-family: Solis, Arial, Helvetica, sans-serif;
+  font-size: 26px;
+}
+.header p {
+  font-size: 15px;
+  display: flex;
+  align-items: center;
+  margin-left: 5px;
+  margin-bottom: 1px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.card {
   display: flex;
   flex-direction: column;
+  max-width: 160px;
+  max-height: 190px;
+  min-width: 160px;
+  min-height: 190px;
   align-items: center;
+  font-weight: 500;
+  color: #878787;
+  border-radius: 10px 20px 5px;
+  margin-right: 4px;
+  margin-top: 4px;
+  border: 2px solid #ffffff;
+  background: rgb(221, 207, 207);
+  background: linear-gradient(
+    21deg,
+    rgba(221, 207, 207, 1) 0%,
+    rgba(227, 215, 215, 1) 33%,
+    rgba(238, 230, 230, 1) 100%
+  );
+  font-size: 16px;
+}
+
+.card span {
+  padding: 5px;
+  padding-top: 8px;
+}
+.card img {
+  width: 50px;
+  height: 50px;
+  
+}
+
+.weather {
+  color: black;
+  font-weight: 800;
+  margin-right: 12px;
+  font-family: Solis, Arial, Helvetica, sans-serif;
+  font-size: 30px;
+}
+
+.grid {
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  flex-wrap: wrap;
 }
 
-.App-link {
-  color: #61dafb;
+.today {
+  background: rgb(249, 196, 154);
+  background: linear-gradient(
+    45deg,
+    rgba(249, 196, 154, 1) 0%,
+    rgba(232, 228, 225, 1) 76%,
+    rgba(242, 238, 235, 1) 100%
+  );
+  border: 2px solid #6e6d6d;
+  border-radius: 10px 30px 15px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.dropdown {
+  display: flex;
+  justify-content: center;
+}
+
+.dropdown select {
+  border: 2px solid #f9c49a;
+  border-radius: 8px 8px 5px;
+  max-width: 182px;
+  min-width: 182px;
+  min-height: 40px;
+  font-size: 18px;
+  font-weight: 600;
+  padding-left: 4px;
+  background: rgb(232, 228, 225);
+  background: linear-gradient(
+    90deg,
+    rgba(232, 228, 225, 1) 0%,
+    rgba(246, 245, 245, 1) 100%
+  );
+}
+
+.footer {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  margin-bottom: 10px;
+}
+
+.temps {
+  opacity: 0.6;
+  line-height: 1.5;
+  font-size: 13px;
+  margin-left: -16px;
 }
